source/assets/stylesheets/vytrishky.css.scss
@import "fonts.css.scss";


//
// Sepia
//
@each $filter in ("grayscale" "sepia") {
    @each $value in (10 20 30 40 50 60 70 80 90 100) {

        .#{$filter}-#{$value} {
        -webkit-filter: unquote("#{$filter}(#{$value}%)");
        -moz-filter: unquote("#{$filter}(#{$value}%)");
        -ms-filter: unquote("#{$filter}(#{$value}%)");
        -o-filter: unquote("#{$filter}(#{$value}%)");
        filter: unquote("#{$filter}(#{$value}%)");
    }
        .#{$filter} {
        -webkit-filter: unquote("#{$filter}(100%)");
        -moz-filter: unquote("#{$filter}(100%)");
        -ms-filter: unquote("#{$filter}(100%)");
        -o-filter: unquote("#{$filter}(100%)");
        filter: unquote("#{$filter}(100%)");

    }
    }
}

// ------------------------------------------------------------------
// Vignette
// ------------------------------------------------------------------
@mixin vignette ($opacity1,$opacity2) {
    &:before {
        position: absolute;
        top: 0;　left: 0; //right: 0; bottom: 0;
        width: 100%;
        height: 100%;
        content: '';
        background-image: radial-gradient(
                                  ellipse ,
                                  rgba(0,0,0,$opacity1), rgba(0,0,0,$opacity2)
                              );
    }

}
.vignette-10 { @include vignette(0,    .1) }
.vignette-20 { @include vignette(0,    .2) }
.vignette-30 { @include vignette(.05,  .3) }
.vignette-40 { @include vignette(.05,  .4) }
.vignette-50 { @include vignette(.07,  .5) }
.vignette-60 { @include vignette(.07,  .6) }
.vignette-70 { @include vignette(.1,   .7) }
.vignette-80 { @include vignette(.1,   .8) }
.vignette-90 { @include vignette(.1,   .9) }
.vignette-100 { @include vignette(.5,   1) }
.vignette   { @include vignette(.5,   1) }

.text-on-dark {
    p {
        padding: 1em;
        background-image: radial-gradient(
                                  ellipse ,
                                  rgba(0,0,0,1), rgba(0,0,0,.1)
                              );
    }
}
// ------------------------------------------------------------------
.intro-header {
    position: relative;
    font-family: $caviar;
    h2 {
        i.disabled {
            color: #666;
        }
        a {
            color: white;
            &:hover {
                color: #337ab7;
            }
        }
    }
}
.chapter-divider {
    font-family: $caviar;
    margin-top: 5ex;
    padding-top: 5em;
    padding-bottom: 5em;
    color: white;
    position: relative;
    text-align: justify;
    position: relative;
    > .row {
        position: absolute;               /* 2 */
        top: 50%;                         /* 3 */
        transform: translate(0, -50%);   /* 4 */
    }
    a {
        color: white;
    }

    &.chapter-divider-tall {
        min-height: 100vh;
    }
}

.row {
    .vertical-aligned {
        p {
            margin-top: 0;
        }
    }
}
blockquote {
    @media screen and (min-width: 800px) {
        /* margin-left: 15%; */
        /* margin-right: 15%; */
        text-align: center;
    }
    font-family: Lora,'Times New Roman',serif;
    font-style: italic;
    text-align: justify;
}

.photo-wrapper {
    padding-bottom: 75%;
    position: relative;
    &.photo-portrait {
        padding-bottom: 150%;
        > .card {
            .card-image {
                height: 85%;
            }
        }
    }
    > .card {
        position: absolute;
        top: 0; bottom: 0; left: 0; right: 0;
        height: 100%;
        background-size: contain;
        margin-bottom: 20px;
        background-position: center top;
        background-repeat: no-repeat;
        padding-bottom: 75%;
        .card-image {
            @include vignette(0,0.6);

            height: 70%;
            position: absolute;
            top: 0; bottom: 20%; left: 0; right: 0;
            background-size: cover;
            background-position: center top;
            background-repeat: no-repeat;
        }
        .card-text {
            position: absolute;
            bottom: 0; left: 0; right: 0;
            background-color: #fff;
            padding: {
                left: 1.5ex;
                right: 1.5ex;
                top: .5ex;
                bottom: 0;
            }
            font-size: 85%;
            overflow: auto;
        }
    }
}

.gallery-text-box {
            position: absolute;
            bottom: 0; left: 0; right: 0;
            background-color: #fff;
            padding: {
                left: 1.5ex;
                right: 1.5ex;
                top: .5ex;
                bottom: 0;
            }
            font-size: 85%;
            overflow: auto;
            .container {
                width: 100%;
            }
}

.card {
    &.card-light-shadow {
        box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.33), 8px 8px 15px rgba(255, 255, 255, 0.15), ;
    }
    .gallery-text {
        height: 15%;
    }
    table {
        border-collapse: collapse;
        td {
            border: 1px solid white;
        }
        tr:first-child td {
            border-top: 0;
        }
        tr td:first-child {
            border-left: 0;
        }

        tr td:last-child {
            border-right: 0;
        }
        &.gallery {
            width: 100%;
            height: 80%;
            margin-bottom: 10%;
            tr.gallery-row {
                /* &:first-child td{ */
                /*     border-top: 0; */
                /* } */
                td.gallery-cell {
                    /* border-left: 1px solid white ; */
                    height: 100%;
                    background-size: cover;
                    background-position: center top;
                    background-repeat: no-repeat;

                }
            }

        }
    }
}


video#bgvid {
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    position: absolute;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    background-repeat: no-repeat;
    background-size: cover;
    @media screen and (max-device-width: 800px) {
        display: none;
    }
}

/* body { background: url(polina.jpg) #000 no-repeat center center fixed; } */
/* } */

// Series navigation
//
#series-nav {
    small {
        color: white;
    }
    .series-link h3 {
        display: inline-block;
        line-height: 2em;
        width: 2em;
        border: 1px solid white;
        margin-left: 1ex;
        border-radius: 50%;
        vertical-align:middle;
        background: transparent;
        text-align: center;
        color: white;
        &.active {
            background-color: white;
            color: black;
        }
    }
    &.series-nav-light-bg {
        small { color: #666; };
        h2 {
            color: #666;
        }
        .series-link h3 {
            color: #666;
            border-color: #666;
            &.active {
                background-color: #666;
                color: white;
        }
        }
    }
}

#year-nav {
    a {
        display: inline-block;
        line-height: 3.9em;
        width: 4em;
        border: 3px solid white;
        margin-left: 1ex;
        border-radius: 50%;
        vertical-align:middle;
        background: transparent;
        text-align: center;
        color: white;
    }
}

.current-page-tags {
    i {
        padding: 2ex;
    }
    position: absolute;
    right: 20px;
    bottom: 20px;
    a {
        color: white;
        font-size: 80%;
        &:not(:last-child) {
            &:after {
                content: "|";
                padding: 1ex;
            }
        }
    }

}
.footer-links  {
    i.fa.fa-2x {
        color: rgb(64,64,64);
    }
    li {
        list-style: none;
        .meta {
            font-size: 70%;
            text-indent: 3ex;
        }
    }
    i.fa.fa-small {
        line-height: inherit;
        vertical-align: middle;
        color: #ddd;
        margin-right: 10px;
        font-size: 80%;
    }
    a {
        margin-right: 1ex;
        font-size: 85%;
        display: inline-block;
        color: #666;
        text-decoration: none;
        a:hover {
        color: #666;
        text-decoration: none;
        }
    }
}

